--- a/styles-dd.css
+++ b/styles-dd.css
@@ -31,12 +31,6 @@ main {
     position: relative;
 }
 
-.card img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
-}
-
 .card h2 {
     margin-top: 20px;
     font-size: 22px;
@@ -46,12 +40,6 @@ main {
 .card p {
     font-size: 16px;
     color: #666;
-}
-
-.buttons {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
 }
 
 button {
@@ -74,12 +62,19 @@ button {
 }
 
 .back-button {
+    margin-top: 40px; /* Erhöhter Abstand nach oben */
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
     margin-top: 20px;
+    margin-bottom: 20px; /* Zusätzlicher Abstand nach unten */
 }
 
 .card img {
     width: 100%;
     height: 200px; /* oder die gewünschte Höhe */
-    object-fit: cover; /* Dies stellt sicher, dass das Bild den Container ausfüllt und dabei sein Seitenverhältnis beibehält */
+    object-fit: cover;
     border-radius: 10px;
 }
