--- a/styles-dd.css
+++ b/styles-dd.css
@@ -31,6 +31,15 @@ main {
     position: relative;
 }
 
+.card img {
+    width: 100%;
+    height: 200px; /* oder die gewünschte Höhe */
+    object-fit: cover; /* Dies verhindert das Abschneiden und passt das Bild in den Container ein */
+    border-radius: 10px;
+}
+
+/* Rest Ihres bestehenden CSS */
+
 .card h2 {
     margin-top: 20px;
     font-size: 22px;
@@ -70,11 +79,4 @@ button {
     justify-content: center;
     margin-top: 20px;
     margin-bottom: 20px; /* Zusätzlicher Abstand nach unten */
-}
-
-.card img {
-    width: 100%;
-    height: 200px; /* oder die gewünschte Höhe */
-    object-fit: cover;
-    border-radius: 10px;
 }
